--- a/client/src/main/resources/bootstrap-prod.yml
+++ b/client/src/main/resources/bootstrap-prod.yml
@@ -4,4 +4,12 @@ spring:
       ### 配置中心参数
       config:
         server-addr: 121.40.24.147:8848
-        namespace: 7989ab0f-4fba-4c0f-bdae-9bf1957b44a8
+        namespace: edf3074c-260a-4238-9c14-de59ca07af48
+        file-extension: yaml
+      discovery:
+        server-addr: 121.40.24.147:8848
+        namespace: edf3074c-260a-4238-9c14-de59ca07af48
+    discovery:
+      enabled: true
+  application:
+    name: nacos-demo-client
