--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>client</module>
-        <module>common</module>
-        <module>server</module>
+        <module>cloud-type</module>
+        <module>nacos-type</module>
     </modules>
 
     <properties>
@@ -52,6 +51,12 @@
                 <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
                 <version>2.1.1.RELEASE</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>nacos-config-spring-boot-starter</artifactId>
+                <version>0.2.3</version>
+            </dependency>
+
 
         </dependencies>
 
